--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 .gitignore
+.idea
 resources/qm/*.*
-.idea/*
-build/*
-build_XX/*
-src/angel/lib/*
+build_XX/**
+build/**
 src/angel/obj/*
+src/angel/lib/*
